# rtac_base

./: :w  CMakeLists.txt  Doxyfile  README.md  rtac_base_tagfile.tag
cmake/: Config.cmake.in  Doxyfile.in  installation.cmake  rpath_config.cmake  rtac_build_docs.cmake  rtac_generate_asm.cmake  rtac_installation.cmake
cuda/: CMakeLists.txt
cuda/cmake/: Config.cmake.in  rtac_generate_ptx.cmake  rtac_target_add_ptx.cmake
cuda/include/rtac_base/cuda/: CUDAPointFormat.h  CudaPing.h  CudaVector.h  DeviceDualMesh.h  DeviceMesh.h  DeviceObject.h  DeviceReference.h  DeviceVector.h  FunctorCompound.h  Functors.h  HostVector.h  Mapping.h  Matrix.h  PinnedVector.h  Texture2D.h  TextureDim.h  TextureFunction2D.h  TextureVector.h  TextureView2D.h  VectorFloatND.h  algorithm.hcu  convolution.hcu  functors.h  geometry.h  mappings.h  operators.h  reductions.hcu  texture_utils.h  utils.h  vec_math.h  vector_utils.h
cuda/src/: DeviceDualMesh.cu  texture_utils.cu  utils.cu  vector_utils.cu
cuda/tests/: CMakeLists.txt
cuda/tests/array_scale/: CMakeLists.txt
cuda/tests/array_scale/src/: array_scale.cu  array_scale.hcu
cuda/tests/eigen_cuda/: CMakeLists.txt
cuda/tests/eigen_cuda/src/: eigen_cuda.cpp  eigen_cuda.cu  eigen_cuda.h
cuda/tests/functors/: CMakeLists.txt
cuda/tests/functors/src/: functors_test.cpp  functors_test.cu  functors_test.h  functors_test.hcu
cuda/tests/geometry_cuda/: CMakeLists.txt
cuda/tests/geometry_cuda/src/: geometry_cuda.cpp  geometry_cuda.cu  geometry_cuda.h
cuda/tests/grid_map/: CMakeLists.txt
cuda/tests/grid_map/src/: grid_map.cu  grid_map.hcu
cuda/tests/mapping/: CMakeLists.txt
cuda/tests/mapping/src/: mapping_test.cpp  mapping_test.cu  mapping_test.h  mapping_test.hcu
cuda/tests/src/: constant_object.cu  cuda_devicevector_test.cu  cuda_sharedvector_test.cu  devicemesh_test.cpp  devicevector_test.cpp  image_test.cpp  linear_algebra.cpp  ping_type.cu  pinned_vector.cu  point_format.cu  reductions_test.cu  scaledimage.cu  texture1d.cu  texture_float2.cu  texture_function.cu  texture_vector.cu
cuda/tests/texture/: CMakeLists.txt
cuda/tests/texture/src/: texture_test.cpp  texture_test.cu  texture_test.h
cuda/tests/tuple_pointer/: CMakeLists.txt
cuda/tests/tuple_pointer/src/: tuplepointer.cpp  tuplepointer.cu  tuplepointer.h
cuda/tests/vector_float_nd/: CMakeLists.txt
cuda/tests/vector_float_nd/src/: vector_float_nd.cpp  vector_float_nd.cu  vector_float_nd.h
cuda/tests/vector_view/: CMakeLists.txt
cuda/tests/vector_view/src/: vector_view.cpp  vector_view.cu  vector_view.h  vector_view.hcu
docs/: Doxyfile
include/rtac_base/: Exception.h  algorithm.h  bin_codecs.h  common.h  cuda_defines.h  files.h  geometry.h  interpolation.h  interpolation_impl.h  misc.h  navigation.h  nmea_utils.h  ply_files.h  signal_helpers.h  time.h  type_utils.h  utilities.h
include/rtac_base/async/: AsyncFunction.h  AsyncWorker.h  Worker.h
include/rtac_base/containers/: DimExpression.h  HostVector.h  Image.h  ScaledArray.h  ScaledImage.h  VectorView.h  utilities.h
include/rtac_base/cuda/: SharedVectors.h
include/rtac_base/files/: sonar_ping.h
include/rtac_base/serialization/: serialization.h  sonar_ping.h
include/rtac_base/types/: Array2D.h  ArrayScale.h  ArrayView.h  Bounds.h  BuildTarget.h  Buildable.h  CallbackQueue.h  Complex.h  DualMesh.h  Edge.h  GridMap.h  Handle.h  HostVector.h  Image.h  Linspace.h  MappedGrid.h  MappedPointer.h  Mesh.h  NDPoint.h  PODWrapper.h  Point.h  PointCloud.h  PointCloudBase.h  PointFormat.h  Pose.h  Rectangle.h  SampledField.h  ScaledArray.h  Shape.h  SharedVector.h  SonarPing.h  SonarPing2D.h  StringId.h  Time.h  TuplePointer.h  TypeInfo.h  VectorView.h  common.h  functions.h
include/rtac_tools/: files.h
include/rtac_tools/types/: Mesh.h  Pose.h  common.h
src/: Mesh.cpp  bin_codecs.cpp  files.cpp  misc.cpp  ply_files.cpp  time.cpp
src/async/: AsyncWorker.cpp  Worker.cpp
src/types/: BuildTarget.cpp  Time.cpp  common.cpp
tests/: CMakeLists.txt
tests/array_tests/: CMakeLists.txt
tests/array_tests/src/: array_tests.cpp  functions0.cpp  functions1.cpp
tests/containers/: CMakeLists.txt
tests/containers/src/: container_views.cpp  hostvector.cpp  image.cpp  scaled_arrays.cpp  scaled_image.cpp  vectorview.cpp
tests/ndpoint/: CMakeLists.txt
tests/ndpoint/src/: ndpoint.cpp  ndpoint_test.cpp
tests/src/: algorithm_test.cpp  array_2d.cpp  array_scale.cpp  async_worker01.cpp  bin_codecs_test.cpp  bounds_test.cpp  buildables_test.cpp  buildtarget_test.cpp  complex_test.cpp  cuda_vectors_test.cu  exception.cpp  files-test.cpp  files_test.cpp  functions.cpp  geometry_test.cpp  image_test.cpp  interpolation_test.cpp  mappedpointer_test.cpp  mathtypes_test.cpp  mesh.cpp  misc_test.cpp  navigation_test.cpp  nmea_utils.cpp  packed_struct.cpp  ping_serialization.cpp  ping_type.cpp  ply_files_test.cpp  ply_test.cpp  point_format.cpp  pointcloud_test.cpp  pose_string.cpp  ppmformat_test.cpp  sampled_field.cpp  scaled_arrays.cpp  serialization.cpp  sharedvector_test.cpp  string_id.cpp  time_test.cpp  tuplepointer.cpp  type_utils_test.cpp  (+4 more)
